Source/WebCore/platform/mediastream/RealtimeOutgoingAudioSource.h
@@ -58,13 +58,11 @@ public:
 protected:
     explicit RealtimeOutgoingAudioSource(Ref<MediaStreamTrackPrivate>&&);
 
-    virtual void handleMutedIfNeeded();
-    virtual void sendSilence() { };
-    virtual void pullAudioData() { };
+    virtual void pullAudioData() { }
+
+    bool isSilenced() const { return m_muted || !m_enabled; }
 
     Vector<webrtc::AudioTrackSinkInterface*> m_sinks;
-    bool m_muted { false };
-    bool m_enabled { true };
 
 private:
     virtual void AddSink(webrtc::AudioTrackSinkInterface* sink) { m_sinks.append(sink); }
@@ -102,8 +100,8 @@ private:
     void initializeConverter();
 
     Ref<MediaStreamTrackPrivate> m_audioSource;
-
-    Timer m_silenceAudioTimer;
+    bool m_muted { false };
+    bool m_enabled { true };
 };
 
 } // namespace WebCore
